[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/MatchBtns.gd" type="Script" id=1]
[ext_resource path="res://resources/assets/botao-mais.png" type="Texture" id=2]
[ext_resource path="res://resources/assets/pedra-solta.png" type="Texture" id=3]
[ext_resource path="res://resources/Antonio-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://resources/Antonio-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/assets/ok-cancela.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 4 )

[node name="InfoBtn" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="OpenBtn" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -115.0
margin_right = -11.0
margin_bottom = -11.0
texture_normal = ExtResource( 2 )

[node name="Buttons" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Fade" type="ColorRect" parent="Buttons"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 0.207843 )

[node name="CloseBtn" type="Button" parent="Buttons"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="ClassBtn" type="Button" parent="Buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -79.0
margin_top = -82.0
margin_right = -27.0
margin_bottom = -29.0

[node name="InfoBtn" type="Button" parent="Buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -79.0
margin_top = -155.0
margin_right = -27.0
margin_bottom = -102.0

[node name="NotesBtn" type="Button" parent="Buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -79.0
margin_top = -228.0
margin_right = -27.0
margin_bottom = -175.0

[node name="PopUp" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="PopUp"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 0.207843 )

[node name="pedra-solta" type="Sprite" parent="PopUp"]
position = Vector2( 304, 547 )
scale = Vector2( 0.95, 0.92 )
texture = ExtResource( 3 )

[node name="NameLAbel" type="Label" parent="PopUp"]
margin_left = 110.0
margin_top = 228.0
margin_right = 454.0
margin_bottom = 347.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.94902, 0.901961, 1 )
text = "Lobisomem (Lobisomens)"
autowrap = true

[node name="InfoLabel" type="Label" parent="PopUp"]
margin_left = 110.0
margin_top = 350.0
margin_right = 486.0
margin_bottom = 655.0
custom_fonts/font = SubResource( 2 )
text = "aksdkasdk asldkala"
autowrap = true

[node name="LabelWolfs" type="Label" parent="PopUp"]
visible = false
margin_left = 110.0
margin_top = 659.0
margin_right = 486.0
margin_bottom = 708.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.94902, 0.901961, 1 )
text = "Outros Lobisomens"
autowrap = true

[node name="ScrollContainer" type="ScrollContainer" parent="PopUp"]
margin_left = 110.0
margin_top = 700.0
margin_right = 486.0
margin_bottom = 850.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="PopUp/ScrollContainer"]

[node name="Close" type="TextureButton" parent="PopUp"]
margin_left = 208.737
margin_top = 868.028
margin_right = 361.737
margin_bottom = 929.028
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="PopUp"]
margin_left = 224.0
margin_top = 874.0
margin_right = 351.0
margin_bottom = 910.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.294118, 0.223529, 0.129412, 1 )
text = "Fechar"
align = 1
valign = 1
[connection signal="pressed" from="OpenBtn" to="." method="_on_OpenBtn_pressed"]
[connection signal="pressed" from="PopUp/Close" to="." method="_on_Close_pressed"]
